# Haskell-Practice

./: .gitignore  README.md  notes.org
basebull/: README.md  basebull.cabal  stack.yaml
basebull/src/: Basebull.hs  Main.hs
basebull/test/: Tests.hs
cis194/: LICENSE  README.md  cis194.cabal  stack.yaml
cis194/app/: Main.hs
cis194/src/: Lib.hs  Lyah02.hs
cis194/src/Misc/: Calcs.hs  Date2.hs  Dates.hs  Passwd.hs
cis194/src/Week01/: Creditcard.hs  Hanoi.hs  Lecture01.hs  WC.hs  myDrop.hs
cis194/src/Week02/: Add.hs  AlgerbraicVector.hs  BookStore.hs  Bool.hs  Distinction.hs  Realworld03.hs
cis194/src/week01/: Lyah02.hs
cis194/test/: LibSpec.hs
cis194/test/Week01/: CreditcardSpec.hs  HanoiSpec.hs
db-practice/: db-practice.cabal
db-practice/src/: Lib.hs
helloworld/: helloworld.cabal  stack.yaml
helloworld/src/: Lib.hs
my-project/: LICENSE  README.md  my-project.cabal
my-project/src/: Assignment.hs  HCat.hs  Main.hs  Printn.hs
testing-project/: README.md  testing-project.cabal
testing-project/src/: Fib.hs  FindIdentifier.hs  Lib.hs  Math.hs
testing-project/src/Misc/: Stuff.hs
testing-project/test/: FibSpec.hs  FindIdentifier_Test.hs  HeadSpec.hs.bck  LibSpec.hs  MathSpec.hs  Spec.hs  TestStuff.hs
testing-project/test/Misc/: StuffSpec.hs
