name:                basebull
version:             0.1.0.0
synopsis:            Processing some csv data
description:         Baseball data analysis
homepage:            https://github.com/emaphis/Haskell-Practice/basebull
license:             BSD3
license-file:        LICENSE
author:              Ed Maphis
maintainer:          emaphis85@gmail.com
copyright:           2016 Ed Maphis
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable basebull
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base,
                       bytestring,
                       vector,
                       cassava
  default-language:    Haskell2010

test-suite basebull-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , basebull
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/emaphis/Haskell-Practice/basebull
