name:                cis194
version:             0.1.0.0
synopsis:            Practicing Haskell using CIS 194
description:         Please see README.md
homepage:            http://www.seas.upenn.edu/~cis194/spring13/index.html
license:             BSD3
license-file:        LICENSE
author:              Original content: Brent Yorgey
                     Completed Exercises: Ed Maphis
maintainer:          emaphis85@gmail.com
copyright:           2016 Ed Maphis
category:            Education
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

executable cis194-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cis194
  default-language:    Haskell2010

test-suite cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cis194
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/edmaphis/Haskell-Practice/cis194
