name:                testing-project
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/testing-project#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Math
                     , Fib
                     , Misc.Stuff
                     , FindIdentifier
  build-depends:       HUnit >= 1.3.1.1
                     , QuickCheck >= 2.8.1
                     , base >= 4.7 && < 5
                     , hspec >= 2.2.3
                     , syb >= 0.6
  default-language:    Haskell2010

executable testing-project-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       HUnit >= 1.3.1.1
                     , QuickCheck >= 2.8.1
                     , base
                     , hspec >= 2.2.3
                     , syb >= 0.6
                     , testing-project
  default-language:    Haskell2010

test-suite testing-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       HUnit >= 1.3.1.1
                     , QuickCheck
                     , QuickCheck >= 2.8.1
                     , base
                     , hspec >= 2.2.3
                     , hspec-core
                     , syb >= 0.6
                     , testing-project
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/emaphis/Haskell-Practice/testing-project
